--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a href="#" class="active">Places to stay</a>
                     </li>
                     <li>
-                        <a href="#">Experience</a>
+                        <a href="./searchListing.html">Experiences</a>
                     </li>
                     <li>
                         <a href="#">Online Experiences</a>
